fix too wide main on PC (fixes #7)

--- a/web/litter.css
+++ b/web/litter.css
@@ -24,3 +24,18 @@ sub {
   line-height: 1;
   font-size: .5em;
 }
+
+/*@media only screen and (min-width: 601px) and (max-width: 992px){
+    main {
+        max-width: 50%;
+    }
+}*/
+
+@media only screen and (min-width: 993px) {
+    main {
+        max-width: 50% !important;
+    }
+    /*button {
+        #max-width: 50%;
+    }*/
+}
